deploy/overlays/test/ingress-route-patch.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: anon-blog
  namespace: anon-blog-test
spec:
  routes:
  - match: Host(`abapi-test.vengarl.com`)
    kind: Rule
    services:
    - name: anon-blog
      port: 80
---
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: anon-blog-cert
  namespace: anon-blog-test
spec:
  dnsNames:
    - abapi-test.vengarl.com
